@@ -1,3 +1,7 @@
+2017-02-08  Robby Stephenson  <robby@periapsis.org>
+
+	* Fixed relative file locations in HTML export (Bug 376134).
+
 2017-02-05  Robby Stephenson  <robby@periapsis.org>
 
 	* Fixed image open dialog to remember last location (Bug 376002).
